--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 for Your Business" />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Raleway:wght@700&display=swap"
       rel="stylesheet" />
@@ -21,187 +22,203 @@ for Your Business" />
   <body>
     <!-- Header -->
     <header>
-      <nav>
-        <a class="logo" href="./index.html"
-          >Web<span class="logo-nav">Studio</span></a
-        >
-        <ul>
-          <li><a class="nav" href="./index.html">Studio</a></li>
-          <li><a class="nav" href="">Portfolio</a></li>
-          <li><a class="nav" href="">Contacts</a></li>
-        </ul>
-      </nav>
-
-      <address class="address">
-        <ul>
-          <li>
-            <a class="contacts" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+      <div class="container">
+        <div class="header-container">
+          <nav class="header-nav">
+            <a class="logo" href="./index.html"
+              >Web<span class="logo-nav">Studio</span></a
             >
-          </li>
-          <li>
-            <a class="contacts" href="tel:+110001111111">+11 (000) 111-11-11</a>
-          </li>
-        </ul>
-      </address>
+            <ul class="list-nav">
+              <li><a class="nav" href="./index.html">Studio</a></li>
+              <li><a class="nav" href="">Portfolio</a></li>
+              <li><a class="nav" href="">Contacts</a></li>
+            </ul>
+          </nav>
+          <address class="address">
+            <ul class="list-address">
+              <li>
+                <a class="contacts" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li>
+                <a class="contacts" href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+      </div>
     </header>
     <!-- Main content -->
     <main>
+      <!-- Section1 -->
       <section class="section-hero">
-        <h1 class="title-hero">Effective Solutions for Your Business</h1>
-        <button class="button" type="button">Order Service</button>
+        <div class="container">
+          <h1 class="title-hero">Effective Solutions for Your Business</h1>
+          <button class="button" type="button">Order Service</button>
+        </div>
       </section>
-
+      <!-- Section2 -->
       <section>
-        <h2 hidden>Feature</h2>
-        <ul>
-          <li>
-            <h3 class="title-feature">Strategy</h3>
-            <p class="text-feature">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="title-feature">Punctuality</h3>
-            <p class="text-feature">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="title-feature">Diligence</h3>
-            <p class="text-feature">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="title-feature">Technologies</h3>
-            <p class="text-feature">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="visually-hidden">Feature</h2>
+          <ul class="feature-list">
+            <li class="feature-list-item">
+              <h3 class="title-feature">Strategy</h3>
+              <p class="text-feature">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="feature-list-item">
+              <h3 class="title-feature">Punctuality</h3>
+              <p class="text-feature">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li class="feature-list-item">
+            <li>
+              <h3 class="title-feature">Diligence</h3>
+              <p class="text-feature">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li class="feature-list-item">
+            <li>
+              <h3 class="title-feature">Technologies</h3>
+              <p class="text-feature">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
-
+      <!-- Section3 -->
       <section class="section-our-team">
-        <h2 class="title-our-team">Our Team</h2>
-        <ul>
-          <li>
-            <img
-              src="./images/img-3.jpg"
-              alt="Mark Guerrero"
-              width="264"
-              height="260"
-              class="img-our-team" />
-            <h3 class="title-name">Mark Guerrero</h3>
-            <p class="text-name">Product Designer</p>
-          </li>
-          <li>
-            <img
-              src="./images/img-2.jpg"
-              alt="Tom Ford"
-              width="264"
-              height="260"
-              class="img-our-team" />
-            <h3 class="title-name">Tom Ford</h3>
-            <p class="text-name">Frontend Developer</p>
-          </li>
-          <li>
-            <img
-              src="./images/img-1.jpg"
-              alt="Camila Garcia"
-              width="264"
-              height="260"
-              class="img-our-team" />
-            <h3 class="title-name">Camila Garcia</h3>
-            <p class="text-name">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/img.jpg"
-              alt="Daniel Wilson"
-              width="264"
-              height="260"
-              class="img-our-team" />
-            <h3 class="title-name">Daniel Wilson</h3>
-            <p class="text-name">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+            <h2 class="title-our-team">Our Team</h2>
+            <ul class="our-team-list">
+              <li class="our-team-item">
+                <img
+                  src="./images/img-3.jpg"
+                  alt="Mark Guerrero"
+                  width="264"
+                  height="260"
+                  class="img-our-team" />
+                <h3 class="title-name">Mark Guerrero</h3>
+                <p class="text-name">Product Designer</p>
+              </li>
+              <li class="our-team-item">
+                <img
+                  src="./images/img-2.jpg"
+                  alt="Tom Ford"
+                  width="264"
+                  height="260"
+                  class="img-our-team" />
+                <h3 class="title-name">Tom Ford</h3>
+                <p class="text-name">Frontend Developer</p>
+              </li>
+              <li class="our-team-item">
+                <img
+                  src="./images/img-1.jpg"
+                  alt="Camila Garcia"
+                  width="264"
+                  height="260"
+                  class="img-our-team" />
+                <h3 class="title-name">Camila Garcia</h3>
+                <p class="text-name">Marketing</p>
+              </li>
+              <li class="our-team-item">
+                <img
+                  src="./images/img.jpg"
+                  alt="Daniel Wilson"
+                  width="264"
+                  height="260"
+                  class="img-our-team" />
+                <h3 class="title-name">Daniel Wilson</h3>
+                <p class="text-name">UI Designer</p>
+              </li>
+            </ul>
+        </div>
       </section>
 
-      <!-- Portfolio -->
+      <!-- Section4 -->
       <section>
-        <h2 class="title-our-portfolio">Our Portfolio</h2>
-        <ul>
-          <li>
-            <img
-              src="./images/project-card-1.jpg"
-              alt="Banking App"
-              width="360"
-              height="300" />
-            <h3 class="title-portfolio">Banking App</h3>
-            <p class="text-portfolio">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/project-card-2.jpg"
-              alt="Cashless Payment"
-              width="360"
-              height="300" />
-            <h3 class="title-portfolio">Cashless Payment</h3>
-            <p class="text-portfolio">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/project-card-3.jpg"
-              alt="Meditation App"
-              width="360"
-              height="300" />
-            <h3 class="title-portfolio">Meditation App</h3>
-            <p class="text-portfolio">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/project-card-4.jpg"
-              alt="Taxi Service"
-              width="360"
-              height="300" />
-            <h3 class="title-portfolio">Taxi Service</h3>
-            <p class="text-portfolio">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/project-card-5.jpg"
-              alt="Screen Illustrations"
-              width="360"
-              height="300" />
-            <h3 class="title-portfolio">Screen Illustrations</h3>
-            <p class="text-portfolio">Design</p>
-          </li>
-          <li>
-            <img
-              src="./images/project-card-6.jpg"
-              alt="Online Courses"
-              width="360"
-              height="300" />
-            <h3 class="title-portfolio">Online Courses</h3>
-            <p class="text-portfolio">Marketing</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="title-our-portfolio">Our Portfolio</h2>
+          <ul class="portfolio-list">
+            <li class="portfolio-list-item">
+              <img
+                src="./images/project-card-1.jpg"
+                alt="Banking App"
+                width="360"
+                height="300" class="img-portfolio"/>
+              <h3 class="title-portfolio">Banking App</h3>
+              <p class="text-portfolio">App</p>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                src="./images/project-card-2.jpg"
+                alt="Cashless Payment"
+                width="360"
+                height="300" class="img-portfolio"/>
+              <h3 class="title-portfolio">Cashless Payment</h3>
+              <p class="text-portfolio">Marketing</p>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                src="./images/project-card-3.jpg"
+                alt="Meditation App"
+                width="360"
+                height="300" class="img-portfolio"/>
+              <h3 class="title-portfolio">Meditation App</h3>
+              <p class="text-portfolio">App</p>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                src="./images/project-card-4.jpg"
+                alt="Taxi Service"
+                width="360"
+                height="300" class="img-portfolio"/>
+              <h3 class="title-portfolio">Taxi Service</h3>
+              <p class="text-portfolio">Marketing</p>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                src="./images/project-card-5.jpg"
+                alt="Screen Illustrations"
+                width="360"
+                height="300" class="img-portfolio"/>
+              <h3 class="title-portfolio">Screen Illustrations</h3>
+              <p class="text-portfolio">Design</p>
+            </li>
+            <li class="portfolio-list-item">
+              <img
+                src="./images/project-card-6.jpg"
+                alt="Online Courses"
+                width="360"
+                height="300" class="img-portfolio"/>
+              <h3 class="title-portfolio">Online Courses</h3>
+              <p class="text-portfolio">Marketing</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!-- Footer -->
     <footer class="footer">
-      <a class="logo" href="./index.html"
-        >Web<span class="logo-footer">Studio</span></a
-      >
-      <p class="text-footer">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a class="logo" href="./index.html"
+          >Web<span class="logo-footer">Studio</span></a
+        >
+        <p class="text-footer">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
