--- a/index.html
+++ b/index.html
@@ -21,34 +21,32 @@ for Your Business" />
   </head>
   <body>
     <!-- Header -->
-    <header>
+    <header class="top-line">
       <div class="container">
-        <div class="header-container">
-          <nav class="header-nav">
-            <a class="logo" href="./index.html"
-              >Web<span class="logo-nav">Studio</span></a
+          <nav class="menu-nav">
+            <a class="logo-nav" href="./index.html"
+              >Web<span class="logo-studio">Studio</span></a
             >
-            <ul class="list-nav">
-              <li><a class="nav" href="./index.html">Studio</a></li>
-              <li><a class="nav" href="">Portfolio</a></li>
-              <li><a class="nav" href="">Contacts</a></li>
+            <ul class="menu">
+              <li><a class="list-nav-item" href="./index.html">Studio</a></li>
+              <li><a class="list-nav-item" href="">Portfolio</a></li>
+              <li><a class="list-nav-item" href="">Contacts</a></li>
             </ul>
-          </nav>
-          <address class="address">
+          <address class="contact">
             <ul class="list-address">
               <li>
-                <a class="contacts" href="mailto:info@devstudio.com"
+                <a class="contact-list" href="mailto:info@devstudio.com"
                   >info@devstudio.com</a
                 >
               </li>
               <li>
-                <a class="contacts" href="tel:+110001111111"
+                <a class="contact-list" href="tel:+110001111111"
                   >+11 (000) 111-11-11</a
                 >
               </li>
             </ul>
           </address>
-        </div>
+        </nav>
       </div>
     </header>
     <!-- Main content -->
@@ -108,8 +106,10 @@ for Your Business" />
                   width="264"
                   height="260"
                   class="img-our-team" />
-                <h3 class="title-name">Mark Guerrero</h3>
-                <p class="text-name">Product Designer</p>
+                <div class="people-name">
+                  <h3 class="title-name">Mark Guerrero</h3>
+                  <p class="text-name">Product Designer</p>
+                </div>
               </li>
               <li class="our-team-item">
                 <img
@@ -118,8 +118,10 @@ for Your Business" />
                   width="264"
                   height="260"
                   class="img-our-team" />
-                <h3 class="title-name">Tom Ford</h3>
-                <p class="text-name">Frontend Developer</p>
+                <div class="people-name">
+                  <h3 class="title-name">Tom Ford</h3>
+                  <p class="text-name">Frontend Developer</p>
+                </div>
               </li>
               <li class="our-team-item">
                 <img
@@ -128,8 +130,10 @@ for Your Business" />
                   width="264"
                   height="260"
                   class="img-our-team" />
-                <h3 class="title-name">Camila Garcia</h3>
-                <p class="text-name">Marketing</p>
+                <div class="people-name">
+                  <h3 class="title-name">Camila Garcia</h3>
+                  <p class="text-name">Marketing</p>
+                </div>
               </li>
               <li class="our-team-item">
                 <img
@@ -138,15 +142,17 @@ for Your Business" />
                   width="264"
                   height="260"
                   class="img-our-team" />
-                <h3 class="title-name">Daniel Wilson</h3>
-                <p class="text-name">UI Designer</p>
+                <div class="people-name">
+                  <h3 class="title-name">Daniel Wilson</h3>
+                  <p class="text-name">UI Designer</p>
+                </div>
               </li>
             </ul>
         </div>
       </section>
 
       <!-- Section4 -->
-      <section>
+      <section class="section-portfolio">
         <div class="container">
           <h2 class="title-our-portfolio">Our Portfolio</h2>
           <ul class="portfolio-list">
@@ -156,8 +162,10 @@ for Your Business" />
                 alt="Banking App"
                 width="360"
                 height="300" class="img-portfolio"/>
-              <h3 class="title-portfolio">Banking App</h3>
-              <p class="text-portfolio">App</p>
+              <div class="div-portfolio">
+                <h3 class="title-portfolio">Banking App</h3>
+                <p class="text-portfolio">App</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -165,8 +173,10 @@ for Your Business" />
                 alt="Cashless Payment"
                 width="360"
                 height="300" class="img-portfolio"/>
-              <h3 class="title-portfolio">Cashless Payment</h3>
-              <p class="text-portfolio">Marketing</p>
+              <div class="div-portfolio">
+                <h3 class="title-portfolio">Cashless Payment</h3>
+                <p class="text-portfolio">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -174,8 +184,10 @@ for Your Business" />
                 alt="Meditation App"
                 width="360"
                 height="300" class="img-portfolio"/>
-              <h3 class="title-portfolio">Meditation App</h3>
-              <p class="text-portfolio">App</p>
+              <div class="div-portfolio">
+                <h3 class="title-portfolio">Meditation App</h3>
+                <p class="text-portfolio">App</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -183,8 +195,10 @@ for Your Business" />
                 alt="Taxi Service"
                 width="360"
                 height="300" class="img-portfolio"/>
-              <h3 class="title-portfolio">Taxi Service</h3>
-              <p class="text-portfolio">Marketing</p>
+              <div class="div-portfolio">
+                <h3 class="title-portfolio">Taxi Service</h3>
+                <p class="text-portfolio">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -192,8 +206,10 @@ for Your Business" />
                 alt="Screen Illustrations"
                 width="360"
                 height="300" class="img-portfolio"/>
-              <h3 class="title-portfolio">Screen Illustrations</h3>
-              <p class="text-portfolio">Design</p>
+              <div class="div-portfolio">
+                <h3 class="title-portfolio">Screen Illustrations</h3>
+                <p class="text-portfolio">Design</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -201,8 +217,10 @@ for Your Business" />
                 alt="Online Courses"
                 width="360"
                 height="300" class="img-portfolio"/>
-              <h3 class="title-portfolio">Online Courses</h3>
-              <p class="text-portfolio">Marketing</p>
+              <div class="div-portfolio">
+                <h3 class="title-portfolio">Online Courses</h3>
+                <p class="text-portfolio">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
