--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@ for Your Business" />
     <!-- Header -->
     <header class="top-line">
       <div class="container">
-          <nav class="menu-nav">
-            <a class="logo-nav" href="./index.html"
-              >Web<span class="logo-studio">Studio</span></a
-            >
-            <ul class="menu">
-              <li><a class="list-nav-item" href="./index.html">Studio</a></li>
-              <li><a class="list-nav-item" href="">Portfolio</a></li>
-              <li><a class="list-nav-item" href="">Contacts</a></li>
-            </ul>
+        <nav class="menu-nav">
+          <a class="logo-nav" href="./index.html"
+            >Web<span class="logo-studio">Studio</span></a
+          >
+          <ul class="menu">
+            <li><a class="list-nav-item" href="./index.html">Studio</a></li>
+            <li><a class="list-nav-item" href="">Portfolio</a></li>
+            <li><a class="list-nav-item" href="">Contacts</a></li>
+          </ul>
           <address class="contact">
             <ul class="list-address">
               <li>
@@ -59,7 +59,7 @@ for Your Business" />
         </div>
       </section>
       <!-- Section2 -->
-      <section>
+      <section class="section-feature">
         <div class="container">
           <h2 class="visually-hidden">Feature</h2>
           <ul class="feature-list">
@@ -76,15 +76,15 @@ for Your Business" />
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
-            </li class="feature-list-item">
-            <li>
+            </li>
+            <li class="feature-list-item">
               <h3 class="title-feature">Diligence</h3>
               <p class="text-feature">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
-            </li class="feature-list-item">
-            <li>
+            </li>
+            <li class="feature-list-item">
               <h3 class="title-feature">Technologies</h3>
               <p class="text-feature">
                 Design practice focused on digital experiences. We bring forth a
@@ -97,57 +97,57 @@ for Your Business" />
       <!-- Section3 -->
       <section class="section-our-team">
         <div class="container">
-            <h2 class="title-our-team">Our Team</h2>
-            <ul class="our-team-list">
-              <li class="our-team-item">
-                <img
-                  src="./images/img-3.jpg"
-                  alt="Mark Guerrero"
-                  width="264"
-                  height="260"
-                  class="img-our-team" />
-                <div class="people-name">
-                  <h3 class="title-name">Mark Guerrero</h3>
-                  <p class="text-name">Product Designer</p>
-                </div>
-              </li>
-              <li class="our-team-item">
-                <img
-                  src="./images/img-2.jpg"
-                  alt="Tom Ford"
-                  width="264"
-                  height="260"
-                  class="img-our-team" />
-                <div class="people-name">
-                  <h3 class="title-name">Tom Ford</h3>
-                  <p class="text-name">Frontend Developer</p>
-                </div>
-              </li>
-              <li class="our-team-item">
-                <img
-                  src="./images/img-1.jpg"
-                  alt="Camila Garcia"
-                  width="264"
-                  height="260"
-                  class="img-our-team" />
-                <div class="people-name">
-                  <h3 class="title-name">Camila Garcia</h3>
-                  <p class="text-name">Marketing</p>
-                </div>
-              </li>
-              <li class="our-team-item">
-                <img
-                  src="./images/img.jpg"
-                  alt="Daniel Wilson"
-                  width="264"
-                  height="260"
-                  class="img-our-team" />
-                <div class="people-name">
-                  <h3 class="title-name">Daniel Wilson</h3>
-                  <p class="text-name">UI Designer</p>
-                </div>
-              </li>
-            </ul>
+          <h2 class="title-our-team">Our Team</h2>
+          <ul class="our-team-list">
+            <li class="our-team-item">
+              <img
+                src="./images/img-3.jpg"
+                alt="Mark Guerrero"
+                width="264"
+                height="260"
+                class="img-our-team" />
+              <div class="people-name">
+                <h3 class="title-name">Mark Guerrero</h3>
+                <p class="text-name">Product Designer</p>
+              </div>
+            </li>
+            <li class="our-team-item">
+              <img
+                src="./images/img-2.jpg"
+                alt="Tom Ford"
+                width="264"
+                height="260"
+                class="img-our-team" />
+              <div class="people-name">
+                <h3 class="title-name">Tom Ford</h3>
+                <p class="text-name">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="our-team-item">
+              <img
+                src="./images/img-1.jpg"
+                alt="Camila Garcia"
+                width="264"
+                height="260"
+                class="img-our-team" />
+              <div class="people-name">
+                <h3 class="title-name">Camila Garcia</h3>
+                <p class="text-name">Marketing</p>
+              </div>
+            </li>
+            <li class="our-team-item">
+              <img
+                src="./images/img.jpg"
+                alt="Daniel Wilson"
+                width="264"
+                height="260"
+                class="img-our-team" />
+              <div class="people-name">
+                <h3 class="title-name">Daniel Wilson</h3>
+                <p class="text-name">UI Designer</p>
+              </div>
+            </li>
+          </ul>
         </div>
       </section>
 
@@ -161,7 +161,8 @@ for Your Business" />
                 src="./images/project-card-1.jpg"
                 alt="Banking App"
                 width="360"
-                height="300" class="img-portfolio"/>
+                height="300"
+                class="img-portfolio" />
               <div class="div-portfolio">
                 <h3 class="title-portfolio">Banking App</h3>
                 <p class="text-portfolio">App</p>
@@ -172,7 +173,8 @@ for Your Business" />
                 src="./images/project-card-2.jpg"
                 alt="Cashless Payment"
                 width="360"
-                height="300" class="img-portfolio"/>
+                height="300"
+                class="img-portfolio" />
               <div class="div-portfolio">
                 <h3 class="title-portfolio">Cashless Payment</h3>
                 <p class="text-portfolio">Marketing</p>
@@ -183,7 +185,8 @@ for Your Business" />
                 src="./images/project-card-3.jpg"
                 alt="Meditation App"
                 width="360"
-                height="300" class="img-portfolio"/>
+                height="300"
+                class="img-portfolio" />
               <div class="div-portfolio">
                 <h3 class="title-portfolio">Meditation App</h3>
                 <p class="text-portfolio">App</p>
@@ -194,7 +197,8 @@ for Your Business" />
                 src="./images/project-card-4.jpg"
                 alt="Taxi Service"
                 width="360"
-                height="300" class="img-portfolio"/>
+                height="300"
+                class="img-portfolio" />
               <div class="div-portfolio">
                 <h3 class="title-portfolio">Taxi Service</h3>
                 <p class="text-portfolio">Marketing</p>
@@ -205,7 +209,8 @@ for Your Business" />
                 src="./images/project-card-5.jpg"
                 alt="Screen Illustrations"
                 width="360"
-                height="300" class="img-portfolio"/>
+                height="300"
+                class="img-portfolio" />
               <div class="div-portfolio">
                 <h3 class="title-portfolio">Screen Illustrations</h3>
                 <p class="text-portfolio">Design</p>
@@ -216,7 +221,8 @@ for Your Business" />
                 src="./images/project-card-6.jpg"
                 alt="Online Courses"
                 width="360"
-                height="300" class="img-portfolio"/>
+                height="300"
+                class="img-portfolio" />
               <div class="div-portfolio">
                 <h3 class="title-portfolio">Online Courses</h3>
                 <p class="text-portfolio">Marketing</p>
@@ -229,8 +235,8 @@ for Your Business" />
     <!-- Footer -->
     <footer class="footer">
       <div class="container">
-        <a class="logo" href="./index.html"
-          >Web<span class="logo-footer">Studio</span></a
+        <a class="logo-footer" href="./index.html"
+          >Web<span class="logo-footer-studio">Studio</span></a
         >
         <p class="text-footer">
           Increase the flow of customers and sales for your business with
