--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ for Your Business" />
   <body>
     <!-- Header -->
     <header class="top-line">
-      <div class="container">
+      <div class="header-container">
         <nav class="menu-nav">
           <a class="logo-nav" href="./index.html"
             >Web<span class="logo-studio">Studio</span></a
