--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@ for Your Business" />
             <li><a class="list-nav-item" href="">Portfolio</a></li>
             <li><a class="list-nav-item" href="">Contacts</a></li>
           </ul>
-          <address class="contact">
+          <address class="address">
             <ul class="list-address">
-              <li>
+              <li class="address-intem">
                 <a class="contact-list" href="mailto:info@devstudio.com"
                   >info@devstudio.com</a
                 >
-              </li>
+              </li class="address-intem">
               <li>
                 <a class="contact-list" href="tel:+110001111111"
                   >+11 (000) 111-11-11</a
@@ -53,7 +53,7 @@ for Your Business" />
     <main>
       <!-- Section1 -->
       <section class="section-hero">
-        <div class="container">
+        <div class="container-hero">
           <h1 class="title-hero">Effective Solutions for Your Business</h1>
           <button class="button" type="button">Order Service</button>
         </div>
