--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ for Your Business" />
       </section>
       <!-- Section3 -->
       <section class="section-our-team">
-        <div class="container">
+        <div class="container-team">
           <h2 class="title-our-team">Our Team</h2>
           <ul class="our-team-list">
             <li class="our-team-item">
@@ -153,7 +153,7 @@ for Your Business" />
 
       <!-- Section4 -->
       <section class="section-portfolio">
-        <div class="container">
+        <div class="container-portfolio">
           <h2 class="title-our-portfolio">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-list-item">
