--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ for Your Business" />
             <li><a class="list-nav-item" href="">Portfolio</a></li>
             <li><a class="list-nav-item" href="">Contacts</a></li>
           </ul>
+       </nav>
           <address class="address">
             <ul class="list-address">
               <li class="address-intem">
@@ -46,14 +47,13 @@ for Your Business" />
               </li>
             </ul>
           </address>
-        </nav>
       </div>
     </header>
     <!-- Main content -->
     <main>
       <!-- Section1 -->
       <section class="section-hero">
-        <div class="container-hero">
+        <div class="container">
           <h1 class="title-hero">Effective Solutions for Your Business</h1>
           <button class="button" type="button">Order Service</button>
         </div>
@@ -96,7 +96,7 @@ for Your Business" />
       </section>
       <!-- Section3 -->
       <section class="section-our-team">
-        <div class="container-team">
+        <div class="container">
           <h2 class="title-our-team">Our Team</h2>
           <ul class="our-team-list">
             <li class="our-team-item">
@@ -153,7 +153,7 @@ for Your Business" />
 
       <!-- Section4 -->
       <section class="section-portfolio">
-        <div class="container-portfolio">
+        <div class="container">
           <h2 class="title-our-portfolio">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-list-item">
