--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ for Your Business" />
   <body>
     <!-- Header -->
     <header class="top-line">
-      <div class="container-top-line">
+      <div class="container top-line">
         <nav class="menu-nav">
           <a class="logo-nav" href="./index.html"
             >Web<span class="logo-studio">Studio</span></a
@@ -96,7 +96,7 @@ for Your Business" />
       </section>
       <!-- Section3 -->
       <section class="section-our-team">
-        <div class="container">
+        <div class="container container">
           <h2 class="title-our-team">Our Team</h2>
           <ul class="our-team-list">
             <li class="our-team-item">
