--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ for Your Business" />
   <body>
     <!-- Header -->
     <header class="top-line">
-      <div class="container top-line">
+      <div class="container container-top-line">
         <nav class="menu-nav">
           <a class="logo-nav" href="./index.html"
             >Web<span class="logo-studio">Studio</span></a
@@ -54,8 +54,10 @@ for Your Business" />
       <!-- Section1 -->
       <section class="section-hero">
         <div class="container">
-          <h1 class="title-hero">Effective Solutions for Your Business</h1>
-          <button class="button" type="button">Order Service</button>
+          <div class="hero-container">
+            <h1 class="title-hero">Effective Solutions for Your Business</h1>
+            <button class="button" type="button">Order Service</button>
+          </div>
         </div>
       </section>
       <!-- Section2 -->
@@ -96,152 +98,156 @@ for Your Business" />
       </section>
       <!-- Section3 -->
       <section class="section-our-team">
-        <div class="container container">
-          <h2 class="title-our-team">Our Team</h2>
-          <ul class="our-team-list">
-            <li class="our-team-item">
-              <img
-                src="./images/img-3.jpg"
-                alt="Mark Guerrero"
-                width="264"
-                height="260"
-                class="img-our-team" />
-              <div class="people-name">
-                <h3 class="title-name">Mark Guerrero</h3>
-                <p class="text-name">Product Designer</p>
-              </div>
-            </li>
-            <li class="our-team-item">
-              <img
-                src="./images/img-2.jpg"
-                alt="Tom Ford"
-                width="264"
-                height="260"
-                class="img-our-team" />
-              <div class="people-name">
-                <h3 class="title-name">Tom Ford</h3>
-                <p class="text-name">Frontend Developer</p>
-              </div>
-            </li>
-            <li class="our-team-item">
-              <img
-                src="./images/img-1.jpg"
-                alt="Camila Garcia"
-                width="264"
-                height="260"
-                class="img-our-team" />
-              <div class="people-name">
-                <h3 class="title-name">Camila Garcia</h3>
-                <p class="text-name">Marketing</p>
-              </div>
-            </li>
-            <li class="our-team-item">
-              <img
-                src="./images/img.jpg"
-                alt="Daniel Wilson"
-                width="264"
-                height="260"
-                class="img-our-team" />
-              <div class="people-name">
-                <h3 class="title-name">Daniel Wilson</h3>
-                <p class="text-name">UI Designer</p>
-              </div>
-            </li>
-          </ul>
+        <div class="container">
+          <div class="team-container">
+            <h2 class="title-our-team">Our Team</h2>
+            <ul class="our-team-list">
+              <li class="our-team-item">
+                <img
+                  src="./images/img-3.jpg"
+                  alt="Mark Guerrero"
+                  width="264"
+                  height="260"
+                  class="img-our-team" />
+                <div class="people-name">
+                  <h3 class="title-name">Mark Guerrero</h3>
+                  <p class="text-name">Product Designer</p>
+                </div>
+              </li>
+              <li class="our-team-item">
+                <img
+                  src="./images/img-2.jpg"
+                  alt="Tom Ford"
+                  width="264"
+                  height="260"
+                  class="img-our-team" />
+                <div class="people-name">
+                  <h3 class="title-name">Tom Ford</h3>
+                  <p class="text-name">Frontend Developer</p>
+                </div>
+              </li>
+              <li class="our-team-item">
+                <img
+                  src="./images/img-1.jpg"
+                  alt="Camila Garcia"
+                  width="264"
+                  height="260"
+                  class="img-our-team" />
+                <div class="people-name">
+                  <h3 class="title-name">Camila Garcia</h3>
+                  <p class="text-name">Marketing</p>
+                </div>
+              </li>
+              <li class="our-team-item">
+                <img
+                  src="./images/img.jpg"
+                  alt="Daniel Wilson"
+                  width="264"
+                  height="260"
+                  class="img-our-team" />
+                <div class="people-name">
+                  <h3 class="title-name">Daniel Wilson</h3>
+                  <p class="text-name">UI Designer</p>
+                </div>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
 
       <!-- Section4 -->
       <section class="section-portfolio">
         <div class="container">
-          <h2 class="title-our-portfolio">Our Portfolio</h2>
-          <ul class="portfolio-list">
-            <li class="portfolio-list-item">
-              <img
-                src="./images/project-card-1.jpg"
-                alt="Banking App"
-                width="360"
-                height="300"
-                class="img-portfolio" />
-              <div class="div-portfolio">
-                <h3 class="title-portfolio">Banking App</h3>
-                <p class="text-portfolio">App</p>
-              </div>
-            </li>
-            <li class="portfolio-list-item">
-              <img
-                src="./images/project-card-2.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-                class="img-portfolio" />
-              <div class="div-portfolio">
-                <h3 class="title-portfolio">Cashless Payment</h3>
-                <p class="text-portfolio">Marketing</p>
-              </div>
-            </li>
-            <li class="portfolio-list-item">
-              <img
-                src="./images/project-card-3.jpg"
-                alt="Meditation App"
-                width="360"
-                height="300"
-                class="img-portfolio" />
-              <div class="div-portfolio">
-                <h3 class="title-portfolio">Meditation App</h3>
-                <p class="text-portfolio">App</p>
-              </div>
-            </li>
-            <li class="portfolio-list-item">
-              <img
-                src="./images/project-card-4.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-                class="img-portfolio" />
-              <div class="div-portfolio">
-                <h3 class="title-portfolio">Taxi Service</h3>
-                <p class="text-portfolio">Marketing</p>
-              </div>
-            </li>
-            <li class="portfolio-list-item">
-              <img
-                src="./images/project-card-5.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-                class="img-portfolio" />
-              <div class="div-portfolio">
-                <h3 class="title-portfolio">Screen Illustrations</h3>
-                <p class="text-portfolio">Design</p>
-              </div>
-            </li>
-            <li class="portfolio-list-item">
-              <img
-                src="./images/project-card-6.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-                class="img-portfolio" />
-              <div class="div-portfolio">
-                <h3 class="title-portfolio">Online Courses</h3>
-                <p class="text-portfolio">Marketing</p>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </section>
-    </main>
-    <!-- Footer -->
-    <footer class="footer">
-      <div class="container">
-        <a class="logo-footer" href="./index.html"
-          >Web<span class="logo-footer-studio">Studio</span></a
-        >
-        <p class="text-footer">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+          <div class="portfolio-container">
+            <h2 class="title-our-portfolio">Our Portfolio</h2>
+            <ul class="portfolio-list">
+              <li class="portfolio-list-item">
+                <img
+                  src="./images/project-card-1.jpg"
+                  alt="Banking App"
+                  width="360"
+                  height="300"
+                  class="img-portfolio" />
+                <div class="div-portfolio">
+                  <h3 class="title-portfolio">Banking App</h3>
+                  <p class="text-portfolio">App</p>
+                </div>
+              </li>
+              <li class="portfolio-list-item">
+                <img
+                  src="./images/project-card-2.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                  class="img-portfolio" />
+                <div class="div-portfolio">
+                  <h3 class="title-portfolio">Cashless Payment</h3>
+                  <p class="text-portfolio">Marketing</p>
+                </div>
+              </li>
+              <li class="portfolio-list-item">
+                <img
+                  src="./images/project-card-3.jpg"
+                  alt="Meditation App"
+                  width="360"
+                  height="300"
+                  class="img-portfolio" />
+                <div class="div-portfolio">
+                  <h3 class="title-portfolio">Meditation App</h3>
+                  <p class="text-portfolio">App</p>
+                </div>
+              </li>
+              <li class="portfolio-list-item">
+                <img
+                  src="./images/project-card-4.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                  class="img-portfolio" />
+                <div class="div-portfolio">
+                  <h3 class="title-portfolio">Taxi Service</h3>
+                  <p class="text-portfolio">Marketing</p>
+                </div>
+              </li>
+              <li class="portfolio-list-item">
+                <img
+                  src="./images/project-card-5.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                  class="img-portfolio" />
+                <div class="div-portfolio">
+                  <h3 class="title-portfolio">Screen Illustrations</h3>
+                  <p class="text-portfolio">Design</p>
+                </div>
+              </li>
+              <li class="portfolio-list-item">
+                <img
+                  src="./images/project-card-6.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                  class="img-portfolio" />
+                <div class="div-portfolio">
+                  <h3 class="title-portfolio">Online Courses</h3>
+                  <p class="text-portfolio">Marketing</p>
+                </div>
+              </li>
+            </ul>
+                    </div>
+                  </section>
+                </main>
+                <!-- Footer -->
+                <footer class="footer">
+                  <div class="container">
+                    <a class="logo-footer" href="./index.html"
+            >Web<span class="logo-footer-studio">Studio</span></a
+                    >
+                    <p class="text-footer">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+                    </p>
+          </div>
       </div>
     </footer>
   </body>
