--- a/index.html
+++ b/index.html
@@ -53,11 +53,9 @@ for Your Business" />
     <main>
       <!-- Section1 -->
       <section class="section-hero">
-        <div class="container">
-          <div class="hero-container">
+        <div class="container container">
             <h1 class="title-hero">Effective Solutions for Your Business</h1>
             <button class="button" type="button">Order Service</button>
-          </div>
         </div>
       </section>
       <!-- Section2 -->
@@ -99,7 +97,6 @@ for Your Business" />
       <!-- Section3 -->
       <section class="section-our-team">
         <div class="container">
-          <div class="team-container">
             <h2 class="title-our-team">Our Team</h2>
             <ul class="our-team-list">
               <li class="our-team-item">
@@ -151,14 +148,12 @@ for Your Business" />
                 </div>
               </li>
             </ul>
-          </div>
         </div>
       </section>
 
       <!-- Section4 -->
       <section class="section-portfolio">
         <div class="container">
-          <div class="portfolio-container">
             <h2 class="title-our-portfolio">Our Portfolio</h2>
             <ul class="portfolio-list">
               <li class="portfolio-list-item">
@@ -231,7 +226,6 @@ for Your Business" />
                 <div class="div-portfolio">
                   <h3 class="title-portfolio">Online Courses</h3>
                   <p class="text-portfolio">Marketing</p>
-                </div>
               </li>
             </ul>
                     </div>
